test/libsolidity/syntaxTests/constantEvaluator/type_reference.sol
int[L] constant L = 6;
// ----
// TypeError 5462: (4-5): Invalid array length, expected integer literal or constant expression.
